Update Python notebook and add Power Bi folder

--- a/Python/Round 1/UK Train Rides Analysis.ipynb
+++ b/Python/Round 1/UK Train Rides Analysis.ipynb
@@ -34,21 +34,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<p style=\"color: #D5D8DC;\">The UK rail network is a critical component of the country's transportation infrastructure, serving millions of passengers annually. As ridership continues to grow, understanding passenger behavior, preferences, and pain points becomes essential for improving service delivery, optimizing revenue, and enhancing customer satisfaction. This data analysis delves into various aspects of UK train ridership, leveraging key metrics such as ticket types, purchase methods, journey statuses, and delay reasons to uncover actionable insights.</p>"
+        "The UK rail network is a critical component of the country's transportation infrastructure, serving millions of passengers annually. As ridership continues to grow, understanding passenger behavior, preferences, and pain points becomes essential for improving service delivery, optimizing revenue, and enhancing customer satisfaction. This data analysis delves into various aspects of UK train ridership, leveraging key metrics such as ticket types, purchase methods, journey statuses, and delay reasons to uncover actionable insights."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<p style=\"color: #D5D8DC;\">Through this analysis, we aim to address several important questions: What types of tickets generate the most revenue? How do different payment methods and purchase channels influence transaction patterns? What factors contribute to delays or cancellations, and how do these impact refund requests and overall customer experience? Additionally, we explore the distribution of railcard usage, journey statuses, and departure stations to identify trends and opportunities for improvement.</p>"
+        "Through this analysis, we aim to address several important questions: What types of tickets generate the most revenue? How do different payment methods and purchase channels influence transaction patterns? What factors contribute to delays or cancellations, and how do these impact refund requests and overall customer experience? Additionally, we explore the distribution of railcard usage, journey statuses, and departure stations to identify trends and opportunities for improvement."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<p style=\"color: #D5D8DC;\">By examining these dimensions, this analysis provides a comprehensive overview of the current state of the UK train system, highlighting areas of strength and potential challenges. The findings will help stakeholders make informed decisions to enhance operational efficiency, improve customer satisfaction, and ultimately drive sustainable growth in the UK rail sector.</p>"
+        "By examining these dimensions, this analysis provides a comprehensive overview of the current state of the UK train system, highlighting areas of strength and potential challenges. The findings will help stakeholders make informed decisions to enhance operational efficiency, improve customer satisfaction, and ultimately drive sustainable growth in the UK rail sector."
       ]
     },
     {
